<resources>
    <string name="app_name">Mitro</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Mitro</string>
    <string name="title_features">Features</string>
    <string name="title_more">More</string>

    <string name="feedback">The Information in this app is made available by LT Metro share Your feedback through their <a href="https://www.ltmetro.com">website</a></string>
    <string name="queries">For queries you can write to them at <a href="mailto:customerservice@ltmetro.com">customerservice@ltmetro.com</a> or call them \nat <a href="tel:04023332555">040 2333 2555</a> between 6 AM to 10 PM.</string>
    <string name="contact_us">You can also contact them \nthrough <a href="tel:+914023388587">+91 402 338 8587</a> during office hours.</string>
    <string name="aiman">
        Mohd Aiman Saleem\n
        Pursuing Bachelor of Technology in IT\n
        Worked on app UI enhancement and major functionalities\n
        <a href="mailto:aimansaleemmohd@gmail.com">Mail</a> |  <a href="https://www.linkedin.com/in/aimansaleemmohd">LinkedIn</a>
    </string>
    <string name="shahriyaar">
        Mohammed Shahriyaar Ahmed\n
        Pursuing Bachelor of Technology in CSC\n
        Worked on travel guide functionality\n
        <a href="mailto:mohammedshahriyaar@gmail.com">Mail</a> | <a href="https://www.linkedin.com/in/shahriyaar-ahmed-215091216">LinkedIn</a>
    </string>
    <string name="kaleem">
        Mohammed Kaleem Ullah Khan\n
        Pursuing Bachelor of Technology in CSE\n
        Worked on Hotspots Functionality\n
        <a href="mailto:kaleemkkhan718@gmail.com">Mail</a> | <a href="https://www.linkedin.com/in/mohammed-kaleem-ullah-khan-770610229">LinkedIn</a>
    </string>
    <string name="rayyan">
        Mohammed Rayyan\n
        Pursuing Bachelor of Technology in IT\n
        Worked on UI development\n
        <a href="mailto:rayyanmohd767@gmail.com">Mail</a> | <a href="https://www.linkedin.com/in/mohammed-rayyan-49092422a">LinkedIn</a>
    </string>

    <string name="aboutTxt">The only app you’ll need to guide you through the metro stations that are spread across the busy and colorful streets of Hyderabad. There is nothing better than finding a free seat in the metro after a long day\'s work, without any confusion on what stop you have to get down at, to switch trains or which platform you are supposed to go to, with the vast network spread across the major spots in Hyderabad, the Hyderabad metro rail(HMR) is supposedly the best option for travelling through Hyderabad with least commuting time and maximum comfort. \n\nThe MITRO application caters to all the information that you need while planning to commute through the vast network of the HMR, the application provides you with a displaying all the stops that you’ll be going to and will also be displaying you at what stop you are supposed to get down at and change the metro line, the application has the inbuilt feature of displaying the color of the metro line that you are travelling in and also reflects you the color of the metro line you are getting down at, and if you are new to the Hyderabad metro rail system all you need to do is to enter the current station and destination station and the app will find you the least time taking method on how you can reach your destination and will also display the amount that is to be paid at the counter.</string>


</resources>