<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".activities.DevTeam">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAlignment="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="center">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:textAlignment="center">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView14"
                        android:layout_width="match_parent"
                        android:layout_height="222dp"
                        android:textAlignment="center"
                        app:cardBackgroundColor="@color/major"
                        app:cardCornerRadius="0dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/aiman"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:justificationMode="none"
                                android:padding="10dp"
                                android:text="@string/aiman"
                                android:textAlignment="center"
                                android:textColor="#ffffff"
                                android:textColorLink="#FFEB3B"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.509" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView15"
                        android:layout_width="match_parent"
                        android:layout_height="222dp"
                        android:textAlignment="center"
                        app:cardBackgroundColor="#8C3459">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/shahriyaar"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/shahriyaar"
                                android:textAlignment="center"
                                android:textColor="#ffffff"
                                android:textColorLink="#FFEB3B"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.509" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView16"
                        android:layout_width="match_parent"
                        android:layout_height="222dp"
                        android:textAlignment="center"
                        app:cardBackgroundColor="@color/major">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/kaleem"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/kaleem"
                                android:textAlignment="center"
                                android:textColor="#ffffff"
                                android:textColorLink="#FFEB3B"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.509" />
                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="222dp"
                        android:textAlignment="center"
                        app:cardBackgroundColor="#954566">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center">

                            <TextView
                                android:id="@+id/rayyan"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/rayyan"
                                android:textAlignment="center"
                                android:textColor="#ffffff"
                                android:textColorLink="#FFEB3B"
                                android:textSize="16sp"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.509" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </ScrollView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>